--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
     margin-top: 10px;
 }
 .top-bar-logo{
-    vertical-align: bottom;
+    vertical-align: middle;
 }
 .header-list{
     list-style-type: none;
@@ -45,7 +45,7 @@ body{
 }
 .header-jumbotron{
     background-color: lightblue;
-    height: 600px;
+    height: 650px;
 }
 .jumbo-container{
     padding: 80px;
@@ -53,9 +53,18 @@ body{
 .jumbotron-title{
     font-size: 60px;
 }
+.clearfix::after{
+    content:"";
+    display: table;
+    clear: both;
+}
+.jumbofloat{
+    float: left;
+    width: 20%;
+}
 .jumbotron-paragraph{
     font-size: 15px;
-    margin-top: 20px;
+    margin-top: 75px;
 }
 .jumbotron-button{
     margin-top: 20px;
@@ -63,4 +72,14 @@ body{
 .jumbotron-disclaimer{
     font-size: 10px;
     margin-top: 5px;
+}
+.fa-arrow-down{
+    margin-top: 30px;
+    font-size:30px;
+}
+.jumbo-image{
+    margin-right: 100px;
+    width: 60%;
+    height: 400px;
+    float: right;
 }
