--- a/css/style.css
+++ b/css/style.css
@@ -98,14 +98,14 @@ body{
 }
 .column{
     max-width:250px;
-    height: 750px;
+    height: 700px;
     border: 1px solid lightgray;
     margin-top: 30px;
     float: left;
 }
 .column-single{
     text-align: center;
-    border-bottom: 1px solid lightgrey;
+    border-bottom: 1px solid lightgray;
 }
 .column-body{
     padding:20px;
@@ -121,7 +121,8 @@ body{
 .columnfa,
 .column-choice,
 .column-link,
-.column-list{
+.column-list,
+.bigbox-description{
     font-size: 12px;
 }
 .user1{
@@ -130,7 +131,8 @@ body{
 .folder1,
 .pencil1,
 .column-link,
-.column-list{
+.column-list,
+.bigbox-description{
     margin-top: 20px;
 }
 .column-button{
@@ -149,7 +151,28 @@ body{
 }
 .secondcolumn,
 .thirdcolumn{
-    margin-left: 20px;
+    margin-left: 25px;
 }
+.second-main-container{
+    height:200px;
+}
+.bigbox{
+    margin-top: 50px;
+    height: 150px;
+    border: 1px solid lightgray
+}
+.bigbox-content{
+    padding: 20px;
+}
+.bigbox-title{
+    display: inline-block;
+}
+.bigbox-button{
+    margin-left: 480px;
+}
+.bigbox-subtitle{
+    margin-top: 10px;
+}
+
 
 
