--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body{
 }
 #main-container{
     padding: 200px;
-    height: 2000px;
+    height: 3000px;
 }
 .firstsection-title{
     font-size: 30px;
@@ -122,7 +122,8 @@ body{
 .column-choice,
 .column-link,
 .column-list,
-.bigbox-description{
+.bigbox-description,
+.business-col-description{
     font-size: 12px;
 }
 .user1{
@@ -150,7 +151,11 @@ body{
     margin-top: 10px;
 }
 .secondcolumn,
-.thirdcolumn{
+.thirdcolumn,
+.second-col,
+.third-col,
+.fifth-col,
+.sixth-col{
     margin-left: 97px;
 }
 .second-main-container{
@@ -159,7 +164,7 @@ body{
 .bigbox{
     margin-top: 50px;
     height: 150px;
-    border: 1px solid lightgray
+    border: 1px solid lightgrey;
 }
 .bigbox-content{
     padding: 20px;
@@ -197,7 +202,25 @@ body{
     margin-top: 30px;
     padding: 10px;
 }
-
+.businesstitle{
+    font-size: 30px;
+    margin-top: 40px;
+}
+.business-column{
+    margin-top: 20px;
+    max-width: 250px;
+    float: left;
+}
+.business-image{
+    width: 250px;
+    height: 250px;
+}
+.business-col-description{
+    margin-top: 20px;
+}
+.underlinetext{
+    border-bottom: 1px solid black;
+}
 
 
 
