--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
-#header-container{
+#header-container,
+.secondmain-container{
     margin: 0 auto;
     max-width: 1200px;
 }
@@ -14,7 +15,7 @@ body{
     height: 50px;
     margin-top: 10px;
 }
-#header-container .top-bar-logo{
+.top-bar-logo{
     vertical-align: middle;
 }
 .header-list{
@@ -161,9 +162,6 @@ body{
 .sixth-col{
     margin-left: 97px;
 }
-.second-main-container{
-    height:200px;
-}
 .bigbox{
     margin-top: 50px;
     height: 150px;
@@ -270,6 +268,37 @@ body{
 .bgform4{
     background-color: lightskyblue;
     border:10px solid lightskyblue;
+}
+.subcontainer{
+    height: 300px;
+    background-color: rgb(48, 126, 228);
+}
+.subc-title{
+    color: rgb(107, 17, 72);
+    display: inline-block;
+    margin: 100px;
+    font-size: 40px;
+}
+.subc-button{
+    padding: 10px;
+    border: none;
+}
+.questions{
+    padding:50px;
+}
+.questiontitle{
+    font-size: 30px;
+    padding-bottom: 10px;
+}
+.question{
+    padding-top:40px;
+    border: 1px solid black;
+    padding-bottom: 20px;
+    border-left: none;
+    border-right: none;
+}
+.fa-angle-down{
+    margin-left: 250px;
 }
 
 
