--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 #header-container,
-.footer-container,
+#footer-container,
 #svgpart-container{
     margin: 0 auto;
     max-width: 1200px;
@@ -65,7 +65,6 @@ body{
     width: 20%;
 }
 .jumbotron-paragraph{
-    font-size: 15px;
     margin-top: 75px;
 }
 .jumbotron-button{
@@ -77,7 +76,6 @@ body{
 }
 .fa-arrow-down{
     margin-top: 30px;
-    font-size:30px;
 }
 .jumbo-image{
     margin-right: 100px;
@@ -89,7 +87,11 @@ body{
     padding: 200px;
     height: 3100px;
 }
-.firstsection-title{
+.fa-arrow-down,
+.firstsection-title,
+.businesstitle,
+.placement-title,
+.questiontitle{
     font-size: 30px;
 }
 .circled-buttons{
@@ -125,6 +127,7 @@ body{
     margin: 45px 130px 0 10px;
     color: lightgray;
 }
+.jumbotron-paragraph,
 .columnfa,
 .column-choice,
 .column-link,
@@ -209,7 +212,6 @@ body{
     padding: 10px;
 }
 .businesstitle{
-    font-size: 30px;
     margin-top: 40px;
 }
 .business-column{
@@ -248,8 +250,18 @@ svg.design{
 svg.arizona{
     background-color: rgb(100, 19, 64);
 }
-svg.florida{
+.svg-container{
     background-color: lightskyblue;
+    display: inline-block;
+}
+.florida,
+.svg-container{
+    height: 150px;
+    width: 150px;
+}
+.florida{
+    filter: invert(1);
+    transform: scaleX(90%) scaleY(20%);
 }
 svg.topps{
     background-color: rgb(255, 8, 0);
@@ -274,7 +286,7 @@ svg.bicycle{
     background-color: rgb(201, 25, 25);
 }
 svg.hearst{
-    background-color: lightskyblue;
+    background-color: rgb(159, 196, 219);
 }
 svg.planet{
     background-color: blue;
@@ -289,7 +301,7 @@ svg.channel{
 .placement-title{
     color: rgb(128, 0, 60);
     padding: 100px 150px;
-    font-size: 30px;
+    width: 60%;
     display: inline-block;
 }
 .placement-button{
@@ -305,7 +317,6 @@ svg.channel{
     padding:50px;
 }
 .questiontitle{
-    font-size: 30px;
     padding-bottom: 10px;
 }
 .question{
@@ -318,7 +329,7 @@ svg.channel{
 .fa-angle-down{
     margin-left: 250px;
 }
-.footer-container{
+#footer-container{
     background-color: black;
     margin-top: 200px;
 }
