--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,9 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
-#header-container,
-#footer-container,
-#svgpart-container{
+.container90{
+    width: 90%;
     margin: 0 auto;
-    max-width: 1200px;
 }
 #top-bar{
     height: 50px;
@@ -77,7 +75,7 @@ body{
     transition: 2s;
 }
 .header-button{
-    margin-left: 50px;
+    margin-left: 70px;
 }
 .header-jumbotron{
     background-color: lightblue;
@@ -98,9 +96,6 @@ body{
     float: left;
     width: 20%;
 }
-.jumbotron-paragraph{
-    margin-top: 75px;
-}
 .jumbotron-button{
     margin-top: 20px;
 }
@@ -112,14 +107,16 @@ body{
     margin-top: 30px;
 }
 .jumbo-image{
-    margin-right: 100px;
-    width: 60%;
-    height: 400px;
+    margin-left: 20px;
+    width: calc(60% - 20px);
     float: right;
 }
-#main-container{
-    padding: 200px;
-    height: 3100px;
+.margin-top75{
+    margin-top:35px;
+}
+.container60{
+    margin: 0 auto;
+    width: 60%;
 }
 .fa-arrow-down,
 .firstsection-title,
@@ -128,6 +125,9 @@ body{
 .questiontitle{
     font-size: 30px;
 }
+.firstsection-title{
+    margin-top: 100px;
+}
 .circled-buttons{
     padding-top:30px;
 }
@@ -135,8 +135,8 @@ body{
     margin-left: 20px;
 }
 .column{
-    max-width:250px;
-    height: 700px;
+    width: calc(100% / 3 - 20px);
+    min-height: 700px;
     border: 1px solid lightgray;
     margin-top: 30px;
     float: left;
@@ -161,31 +161,14 @@ body{
     margin: 45px 130px 0 10px;
     color: lightgray;
 }
-.jumbotron-paragraph,
-.columnfa,
-.column-choice,
-.column-link,
-.column-list,
-.bigbox-description,
-.business-col-description,
-.morten-cit,
-.footer-li,
-.fa-globe-americas,
-.link-clients,
-.partnerdescription,
+.font12,
 .drop-question-content p{
     font-size: 12px;
 }
 .user1{
     margin-top: 50px;
 }
-.folder1,
-.pencil1,
-.column-link,
-.column-list,
-.bigbox-description,
-.business-col-description,
-.partnerdescription{
+.font12{
     margin-top: 20px;
 }
 .column-button{
@@ -202,8 +185,10 @@ body{
 .column-list-item{
     margin-top: 10px;
 }
-.secondcolumn,
-.thirdcolumn,
+.secondcolumn{
+    margin-left: 30px;
+    margin-right: 30px;
+}
 .second-col,
 .third-col,
 .fifth-col,
@@ -212,7 +197,7 @@ body{
 }
 .bigbox{
     margin-top: 50px;
-    height: 150px;
+    min-height: 150px;
     border: 1px solid lightgrey;
 }
 .bigbox-content{
@@ -223,9 +208,6 @@ body{
 }
 .bigbox-button{
     margin-left: 600px;
-}
-.bigbox-subtitle{
-    margin-top: 10px;
 }
 .partner-box{
     margin-top: 100px;
@@ -238,7 +220,7 @@ body{
     height: 400px;
 }
 .partner-box-text{
-    width: 350px;
+    width: 300px;
     height: 400px;
     margin-top: 30px;
     float: right;
@@ -260,12 +242,11 @@ body{
 }
 .business-column{
     margin-top: 20px;
-    max-width: 250px;
+    width: calc(100% / 3 - 65px);
     float: left;
 }
 .business-image{
-    width: 250px;
-    height: 250px;
+    width: 300px;
 }
 .underlinetext{
     border-bottom: 1px solid black;
@@ -274,8 +255,9 @@ body{
     margin-top: 200px;
     font-size: 40px;
 }
-#svgpart-container{
+.svgpart-container{
     font-size: 0;
+    margin-top: 100px;
 }
 .svg-firstcol,
 .svg-thirdcol{
@@ -328,7 +310,7 @@ svg.seconddesign{
     margin-left: 20px;
 }
 .svghr{
-    margin: 0 550px 20px 20px;
+    margin: 0 540px 20px 30px;
 }
 .morten-cit{
     margin: 31px;
@@ -361,10 +343,6 @@ svg.seconddesign{
     border: none;
     cursor: pointer;
 }
-#second-main-container{
-    height:500px;
-    padding:200px;
-}
 .questions{
     padding:50px;
 }
@@ -385,14 +363,14 @@ svg.seconddesign{
     position: absolute;
 }
 .drop-question-content p{
-    color: rgb(201, 197, 197);
+    color: rgb(175, 170, 170);
     margin-top: 20px;
 }
 .fa-angle-down{
-    margin-left: 250px;
+    margin-left: 150px;
     position: absolute;
 }
-#footer-container{
+.footer-container{
     background-color: black;
     margin-top: 200px;
 }
