--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,7 @@ body{
 }
 #top-bar{
     height: 50px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    padding-top: 10px;
 }
 .top-bar-logo{
     vertical-align: middle;
@@ -259,9 +258,6 @@ body{
     font-size: 0;
     margin-top: 100px;
 }
-.svg-firstcol{
-    margin-right: -5px;
-}
 .svg-firstcol,
 .svg-thirdcol{
     width: 25%;
@@ -275,15 +271,15 @@ img{
     display: inline-block;
     width: 50%;
     height: 150px;
+    line-height: 150px;
+    text-align: center;
 }
 .svg-container img{
     width: 50%;
+    vertical-align: middle;
 }
 .design{
     background-color: rgb(151, 16, 151);
-    border: 10px solid rgb(143, 68, 143);
-    filter: invert(1);
-    transform:scaleX(100%) scaleY(100%);
 }
 .arizona{
     background-color:rgb(143, 248, 239);
@@ -291,12 +287,8 @@ img{
 .invert{
     filter: invert(1);
 }
-.floridasvg{
-    background-color: lightskyblue;
-}
 .florida{
-    transform: scaleX(90%) scaleY(20%);
-    filter: invert(1);
+    background-color: brown;
 }
 .topps{
     background-color: rgb(24, 228, 218);
@@ -305,7 +297,7 @@ img{
     width: 50%;
     background-color: rgb(221, 206, 206);
     float: left;
-    vertical-align: top;
+    height: 300px;
 }
 svg.seconddesign{
     fill: black;
@@ -316,7 +308,7 @@ svg.seconddesign{
     margin: 0 540px 20px 30px;
 }
 .morten-cit{
-    margin: 31px;
+    margin: 15px;
 }
 .bicycle{
     background-color:rgb(9, 247, 235);
